--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,3 @@
-### AL ###
-#Template for AL projects for Dynamics 365 Business Central
-#launch.json folder
-.vscode/
-#Cache folder
-.alcache/
-#Symbols folder
-.alpackages/
-#Snapshots folder
-.snapshots/
-#Testing Output folder
-.output/
-#Extension App-file
-*.app
-#Rapid Application Development File
-rad.json
-#Translation Base-file
-*.g.xlf
-#License-file
-*.flf
-#Test results file
-TestResults.xml
 *.TopVoxel
 *.obj
 *.txt
@@ -32,7 +10,13 @@ TestResults.xml
 *.MiniFEM
 *.topopti
 *.nii
+*.ele
+*.edge
+*.face
+*.node
 
 # Ignore External Repositories
 /external/VolumetricTruss-master/
 /external/gptoolbox-master/
+*.stress
+*.smesh
