--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ FrameData4Gao2017_graph_opt.obj
 VolumetricMichellTrussGraph.obj
 StressField_Tet_v2_Delaunay.obj
 StressField_Tet_v2_Voronoi.obj
+FrameData4Gao2017.txt
 
 # Ignore External Module Repositories
 /externalModules/VolumetricTruss/
